tests/error/comptime/invalid_result_value6.bz
// error: invalid value of type '[: i32]' returned from compile time execution
// note: an array slice of type '[: i32]' is not a constant expression
// error: expression must be a constant expression
consteval p = {
	let arr = [10: i32]();
	arr as [: i32]
};
